--- a/public/admin/cms/index.html
+++ b/public/admin/cms/index.html
@@ -2,10 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Content Manager</title>
   </head>
   <body>
+    <script>
+      window.CMS_MANUAL_INIT = true;
+    </script>
+
     <script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script>
+
+    <script>
+      CMS.init({
+        config: {
+          backend: {
+            name: "github",
+            repo: "kirubaisathiyam-dev/kirubaisathiyam",
+            branch: "main",
+            auth_type: "implicit",
+            app_id: "Ov23liUveATlqLvpISjv",
+          },
+          media_folder: "public/uploads",
+          public_folder: "/uploads",
+          collections: [
+            {
+              name: "articles",
+              label: "Articles",
+              folder: "content/articles",
+              create: true,
+              slug: "{{year}}-{{month}}-{{day}}-{{hour}}{{minute}}{{second}}",
+              extension: "md",
+              format: "frontmatter",
+              fields: [
+                { label: "Title", name: "title", widget: "string" },
+                { label: "Date", name: "date", widget: "datetime" },
+                { label: "Author", name: "author", widget: "string" },
+                { label: "Body", name: "body", widget: "markdown" }
+              ]
+            }
+          ]
+        }
+      });
+    </script>
   </body>
 </html>
